Update moonwalker pillar visuals